[package]
name = "firebender"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = "0.10.1"
futures = "0.3.31"
regex = "1.11.2"
russh = "0.54.3"
russh-keys = "0.49.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-process = "0.2.5"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }

